--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,36 +2,33 @@ services:
   app:
     build: ./app
     container_name: veritas_app
-    environment:
-      - DB_HOST=db
-      - DB_USER=${MYSQL_USER}
-      - DB_PASSWORD=${MYSQL_PASSWORD}
-      - DB_NAME=${MYSQL_DATABASE}
+    env_file:
+      - ./db/.env
     networks:
-      - mynetwork
+      - veritas-network
     volumes:
       - ./app:/app
     depends_on:
       db:
         condition: service_healthy 
     command: gunicorn -w 4 -b 0.0.0.0:8000 wsgi:app
- 
+  
   web:
     image: nginx:latest
-    container_name: veritas_nginx_server
+    container_name: veritas-nginx_server
     ports:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./app:/app
     networks:
-      - mynetwork
+      - veritas-network
     depends_on:
       - app
- 
+  
   db:
     image: mysql:latest
-    container_name: veritas_mysql_db
+    container_name: veritas-mysql_db
     env_file:
       - ./db/.env
     volumes:
@@ -40,16 +37,15 @@ services:
     ports:
       - 3306:3306
     networks:
-      - mynetwork
+      - veritas-network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 10s
       retries: 10
- 
+
 networks:
-  mynetwork:
+  veritas-network:
     driver: bridge
- 
+
 volumes:
   db_data:
- 
