--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,7 @@
-flask
-gunicorn
-mysql-connector-python
+flask==2.0.1
+gunicorn==20.1.0
+mysql-connector-python==8.0.26
+flask-mysqldb==1.0.1
+python-dotenv==0.19.0
+werkzeug==2.0.1
+Pillow==9.0.1
