--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,16 +2,15 @@ events {}
 
 http {
     server {
-
         listen 80;
-        server_name localhost;
-
+        server_name web.veritas.localtest.me;
+            
         location / {
             proxy_pass http://app:8000;
-            proxy_set_header Host §host;
-            proxy_set_header X-Real-IP §remote_addr;
-            proxy_set_header X-Forwarded-For §proxy_add_x_forwarded_for;
-
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
         }
     }
 }
