conexão da base de dados com o submeter factos e colocar factos submetidos na front-end

--- a/db/.env
+++ b/db/.env
@@ -1,4 +1,4 @@
 MYSQL_ROOT_PASSWORD=veritas_root # alterar para seu projeto
 MYSQL_DATABASE=veritas_db # alterar para seu projeto
 MYSQL_USER=veritas-user # alterar para seu projeto
-MYSQL_PASSWORD=veritasdfkjghdfkjh # alterar para seu projeto
+MYSQL_PASSWORD=1234 # alterar para seu projeto
